k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anjo-traders-production
  labels:
    kubernetes.io/metadata.name: anjo-traders-production
