k8s/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: anjo-traders-frontend
  namespace: anjo-traders-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`anjo-traders.lab`) || Host(`anjo-traders.vienstereoptic.com`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  tls:
    secretName: anjo-traders-frontend-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: anjo-traders-backend
  namespace: anjo-traders-production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`anjo-traders-api.lab`) || Host(`anjo-traders-api.vienstereoptic.com`)
      kind: Rule
      services:
        - name: backend
          port: 8000
  tls:
    secretName: anjo-traders-api-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: anjo-traders-frontend-http
  namespace: anjo-traders-production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`anjo-traders.lab`) || Host(`anjo-traders.vienstereoptic.com`)
      kind: Rule
      middlewares:
      services:
        - name: frontend
          port: 80
