k8s/base/traefik-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-anjo-traders-production
  namespace: traefik
spec:
  podSelector:
    matchLabels:
      app: traefik
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: anjo-traders-production
    ports:
    - port: 80
      protocol: TCP
    - port: 8000
      protocol: TCP
